crates/compiler/src/snapshots/zoisite__lexer__tests__char.snap
---
source: crates/compiler/src/lexer.rs
expression: "tokenize(\"\\'Z\\'\")"
---
(
    [
        Token {
            kind: Char,
            text: "'Z'",
            range: 0..3,
        },
        Token {
            kind: Eof,
            text: "",
            range: 3..3,
        },
    ],
    [],
)
