crates/compiler/src/snapshots/zoisite__lexer__tests__string.snap
---
source: crates/compiler/src/lexer.rs
expression: "tokenize(\"\\\"Zoisite\\\"\")"
---
(
    [
        Token {
            kind: String,
            text: "\"Zoisite\"",
            range: 0..9,
        },
        Token {
            kind: Eof,
            text: "",
            range: 9..9,
        },
    ],
    [],
)
