crates/compiler/src/snapshots/zoisite__lexer__tests__unterminated_string.snap
---
source: crates/compiler/src/lexer.rs
expression: "tokenize(\"\\\"abc\")"
---
(
    [
        Token {
            kind: Error,
            text: "\"abc",
            range: 0..4,
        },
        Token {
            kind: Eof,
            text: "",
            range: 4..4,
        },
    ],
    [
        Diagnostic {
            kind: UnterminatedStringLiteral,
            range: 0..4,
        },
    ],
)
